app initialization and initial implementation

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="error" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/colorAccent</item> <!--apply the color you wat here -->
+        <item name="android:textSize">12dp</item>
+    </style>
+
 </resources>
