--- a/app/src/main/res/layout/activity_add_dream.xml
+++ b/app/src/main/res/layout/activity_add_dream.xml
@@ -13,6 +13,8 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:errorEnabled="true"
+        app:errorTextAppearance="@style/error"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="110dp">
 
@@ -27,6 +29,8 @@
         android:padding="16dp"
         android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/tagLine"
+        app:errorEnabled="true"
+        app:errorTextAppearance="@style/error"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:layout_editor_absoluteX="14dp"
