--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <!--MATERIAL COLOR SHEET...............-->
+    <color name="red_500">#F44336</color>
+    <color name="white">#FFFFFF</color>
+
+    <color name="badge_background_color">@color/red_500</color>
 </resources>
