POST PROJECT DEADLINE --- Filter by predefined tags

--- a/app/src/main/res/layout/activity_add_dream.xml
+++ b/app/src/main/res/layout/activity_add_dream.xml
@@ -21,7 +21,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Flower, Flying, Bond" />
+            android:hint="Tag: eg..Flower, Flying, Bond" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
