--- a/app/src/main/res/layout/activity_add_dream.xml
+++ b/app/src/main/res/layout/activity_add_dream.xml
@@ -8,7 +8,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tagLine"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/description"
         android:padding="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/tagLine"
         app:errorEnabled="true"
         app:errorTextAppearance="@style/error"
@@ -39,10 +39,22 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:lines="3"
             android:hint="description" />
     </com.google.android.material.textfield.TextInputLayout>
 
+
+    <EditText
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/description"
+        android:id="@+id/dateItem"
+        android:layout_marginLeft="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:layout_marginTop="10dp"
+        android:ems="10"
+        android:inputType="date"
+        android:hint="Pick a Date" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/add_button"
@@ -53,7 +65,7 @@
         android:layout_marginBottom="20dp"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@+id/description"
+        app:layout_constraintTop_toBottomOf="@+id/dateItem"
         android:layout_width="match_parent"
         android:onClick="saveDream"
         android:layout_height="wrap_content" />
